Remove overflow-x: hidden from html/body/root to prevent content clipping on mobile web app

--- a/src/index.css
+++ b/src/index.css
@@ -4,23 +4,12 @@
 
 /* Prevent horizontal overflow on all pages */
 html {
-  overflow-x: hidden;
   width: 100%;
-  max-width: 100vw;
 }
 
 body {
-  overflow-x: hidden;
-  width: 100%;
-  max-width: 100vw;
   margin: 0;
   box-sizing: border-box;
-}
-
-#root {
-  overflow-x: hidden;
-  width: 100%;
-  max-width: 100vw;
 }
 
 * {
